tests/records_unsupported/records_unsupported.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Records are not enabled. [unsupported-syntax]

   1| record R {} // ERROR: unsupported
      ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:3:11

Records are not enabled. [unsupported-syntax]

   3| const x = R {}; // ERROR: unsupported
                ^^^^



Found 2 errors
